examples/test/testpolicy18996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18996
  namespace: namespace64
spec:
  podSelector:
    matchLabels:
      key48: value13
      key25: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value7
          key31: value16
          key49: value24
      podSelector:
        matchLabels:
          key15: value32
          key2: value40
          key4: value21
